tests/sksl/errors/TernaryMismatch.dsl.glsl
### Compilation failed:

error: ternary operator result mismatch: 'bool', 'float'

error: ternary operator result mismatch: 'float3', 'float'

2 errors
